[workspace]
resolver = "2"
members = [
    "apps/codegen",
    "bindings/frb/ente-rust",
    "bindings/frb/photos",
    "bindings/wasm/ente-wasm",
    "crates/contacts",
    "crates/core",
    "crates/image",
    "crates/photos",
]

[workspace.dependencies]
ente-contacts = { path = "crates/contacts" }
ente-core = { path = "crates/core" }
ente-image = { path = "crates/image" }
ente-photos = { path = "crates/photos" }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
uniffi = { version = "0.31.0" }
wasm-bindgen = "0.2.125"
